--- a/TaskManager/bin/view/TaskView.fxml
+++ b/TaskManager/bin/view/TaskView.fxml
@@ -11,14 +11,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView layoutY="-5.0" prefHeight="408.0" prefWidth="447.0">
-                    <columns>
-                      <TableColumn prefWidth="446.0" text="Proyectos" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
+                  <Label layoutX="177.0" layoutY="129.0" text="Label" fx:id="xd" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
                <children>
