--- a/TaskManager/bin/application/TaskView.fxml
+++ b/TaskManager/bin/application/TaskView.fxml
@@ -1,8 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Control">
+   <children>
+      <SplitPane dividerPositions="0.7525083612040134" prefHeight="400.0" prefWidth="600.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <TableView layoutY="-5.0" prefHeight="408.0" prefWidth="447.0">
+                    <columns>
+                      <TableColumn prefWidth="446.0" text="Proyectos" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children></AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
+               <children>
+                  <Button layoutX="31.0" layoutY="116.0" mnemonicParsing="false" text="Crear Tarea" />
+                  <Button fx:id="CProyecto" layoutX="22.0" layoutY="45.0" mnemonicParsing="false" onAction="#changeText" text="Crear Proyecto" />
+                  <Button layoutX="30.0" layoutY="187.0" mnemonicParsing="false" text="Vista Tareas" />
+                  <Button layoutX="21.0" layoutY="264.0" mnemonicParsing="false" text="Vista Proyectos" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
 </AnchorPane>
-
