--- a/TaskManager/src/view/TaskView.fxml
+++ b/TaskManager/src/view/TaskView.fxml
@@ -5,20 +5,37 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Control">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
    <children>
       <SplitPane dividerPositions="0.7525083612040134" prefHeight="400.0" prefWidth="600.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Label layoutX="177.0" layoutY="129.0" text="Label" fx:id="xd" />
+                  <TableView fx:id="proyectTable" layoutX="40.0" layoutY="46.0" prefHeight="308.0" prefWidth="153.0">
+                    <columns>
+                      <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Proyectos" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <Label fx:id="descriptionLabel" layoutX="220.0" layoutY="88.0" prefHeight="51.0" prefWidth="207.0" text="Descripcion" />
+                  <Label fx:id="firstNameLabel" layoutX="220.0" layoutY="46.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" />
+                  <Label fx:id="priorityLabel" layoutX="290.0" layoutY="164.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" />
+                  <Label fx:id="contextLabel" layoutX="290.0" layoutY="215.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" />
+                  <Label fx:id="deadlineLabel" layoutX="290.0" layoutY="265.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" />
+                  <Label layoutX="220.0" layoutY="164.0" text="Prioridad" />
+                  <Label layoutX="218.0" layoutY="265.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" />
+                  <Label layoutX="218.0" layoutY="215.0" text="Contexto" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
                <children>
-                  <Button layoutX="31.0" layoutY="116.0" mnemonicParsing="false" text="Crear Tarea" />
-                  <Button fx:id="CProyecto" layoutX="22.0" layoutY="45.0" mnemonicParsing="false" onAction="#changeText" text="Crear Proyecto" />
-                  <Button layoutX="30.0" layoutY="187.0" mnemonicParsing="false" text="Vista Tareas" />
+                  <Button layoutX="31.0" layoutY="174.0" mnemonicParsing="false" text="Crear Tarea" />
+                  <Button layoutX="22.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" />
+                  <Button layoutX="30.0" layoutY="222.0" mnemonicParsing="false" text="Vista Tareas" />
                   <Button layoutX="21.0" layoutY="264.0" mnemonicParsing="false" text="Vista Proyectos" />
+                  <Button layoutX="18.0" layoutY="321.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" />
+                  <Button layoutX="21.0" layoutY="98.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" />
                </children>
             </AnchorPane>
         </items>
