--- a/TaskManager/src/view/TareaView.fxml
+++ b/TaskManager/src/view/TareaView.fxml
@@ -5,21 +5,21 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TareaViewController">
    <children>
       <SplitPane dividerPositions="0.7508361204013378" prefHeight="400.0" prefWidth="600.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="proyectTable" layoutX="40.0" layoutY="46.0" prefHeight="308.0" prefWidth="153.0">
+                  <TableView fx:id="taskTable" layoutX="40.0" layoutY="46.0" prefHeight="308.0" prefWidth="153.0">
                     <columns>
-                      <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Proyectos" />
+                      <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Tareas" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Label fx:id="descriptionLabel" layoutX="220.0" layoutY="88.0" prefHeight="51.0" prefWidth="207.0" text="Descripcion" />
+                  <Label fx:id="descriptionLabel" layoutX="220.0" layoutY="76.0" prefHeight="25.0" prefWidth="207.0" text="Descripcion" />
                   <Label fx:id="firstNameLabel" layoutX="220.0" layoutY="46.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" />
                   <Label fx:id="priorityLabel" layoutX="290.0" layoutY="164.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" />
                   <Label fx:id="contextLabel" layoutX="290.0" layoutY="215.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" />
@@ -29,14 +29,15 @@
                   <Label layoutX="218.0" layoutY="215.0" text="Contexto" />
                   <Label layoutX="218.0" layoutY="264.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" />
                   <Label fx:id="inicioLabel" layoutX="290.0" layoutY="264.0" prefHeight="17.0" prefWidth="128.0" />
+                  <Label layoutX="220.0" layoutY="121.0" prefHeight="17.0" prefWidth="54.0" text="Proyecto" />
+                  <Label fx:id="projectLabel" layoutX="290.0" layoutY="121.0" prefHeight="17.0" prefWidth="128.0" text="Proyecto" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
                <children>
-                  <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" />
-                  <Button layoutX="35.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" />
-                  <Button layoutX="21.0" layoutY="122.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" />
-                  <Button layoutX="18.0" layoutY="174.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" />
-                  <Button layoutX="26.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" />
+                  <Button layoutX="35.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleNewTask" text="Crear Tarea" />
+                  <Button layoutX="25.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleProjectView" text="Vista Proyectos" />
+                  <Button layoutX="25.0" layoutY="153.0" mnemonicParsing="false" onAction="#handleDeleteTask" prefHeight="25.0" prefWidth="97.0" text="Eliminar Tarea" />
+                  <Button layoutX="25.0" layoutY="97.0" mnemonicParsing="false" onAction="#handleEditTask" prefHeight="25.0" prefWidth="97.0" text="Editar Tarea" />
                </children>
             </AnchorPane>
         </items>
