--- a/TaskManager/src/view/TaskView.fxml
+++ b/TaskManager/src/view/TaskView.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
    <children>
-      <SplitPane dividerPositions="0.7525083612040134" prefHeight="400.0" prefWidth="600.0">
+      <SplitPane dividerPositions="0.7508361204013378" prefHeight="400.0" prefWidth="600.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -23,19 +23,20 @@
                   <Label fx:id="firstNameLabel" layoutX="220.0" layoutY="46.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" />
                   <Label fx:id="priorityLabel" layoutX="290.0" layoutY="164.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" />
                   <Label fx:id="contextLabel" layoutX="290.0" layoutY="215.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" />
-                  <Label fx:id="deadlineLabel" layoutX="290.0" layoutY="265.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" />
+                  <Label fx:id="deadlineLabel" layoutX="290.0" layoutY="305.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" />
                   <Label layoutX="220.0" layoutY="164.0" text="Prioridad" />
-                  <Label layoutX="218.0" layoutY="265.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" />
+                  <Label layoutX="218.0" layoutY="305.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" />
                   <Label layoutX="218.0" layoutY="215.0" text="Contexto" />
+                  <Label layoutX="218.0" layoutY="264.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" />
+                  <Label fx:id="inicioLabel" layoutX="290.0" layoutY="264.0" prefHeight="17.0" prefWidth="128.0" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
                <children>
-                  <Button layoutX="31.0" layoutY="174.0" mnemonicParsing="false" text="Crear Tarea" />
-                  <Button layoutX="22.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" />
-                  <Button layoutX="30.0" layoutY="222.0" mnemonicParsing="false" text="Vista Tareas" />
-                  <Button layoutX="21.0" layoutY="264.0" mnemonicParsing="false" text="Vista Proyectos" />
-                  <Button layoutX="18.0" layoutY="321.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" />
-                  <Button layoutX="21.0" layoutY="98.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" />
+                  <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" />
+                  <Button layoutX="35.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" />
+                  <Button layoutX="21.0" layoutY="122.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" />
+                  <Button layoutX="18.0" layoutY="174.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" />
+                  <Button layoutX="26.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" />
                </children>
             </AnchorPane>
         </items>
