--- a/TaskManager/bin/view/TaskEditDialog.fxml
+++ b/TaskManager/bin/view/TaskEditDialog.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="338.0" prefWidth="319.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskEditDialogController">
+<AnchorPane prefHeight="370.0" prefWidth="319.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskEditDialogController">
    <children>
-      <GridPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="208.0" prefWidth="292.0" AnchorPane.topAnchor="0.0">
+      <GridPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="249.0" prefWidth="292.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="10.0" prefWidth="94.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="198.0" />
@@ -16,7 +16,8 @@
           <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="36.0" vgrow="ALWAYS" />
           <RowConstraints maxHeight="86.0" minHeight="7.0" prefHeight="67.0" vgrow="ALWAYS" />
             <RowConstraints maxHeight="86.0" minHeight="10.0" prefHeight="33.0" vgrow="ALWAYS" />
-          <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -24,18 +25,20 @@
             <Label prefHeight="17.0" prefWidth="85.0" text=" Descripcion" GridPane.rowIndex="1" />
             <Label text=" Prioridad" GridPane.rowIndex="2" />
             <Label text=" Contexto" GridPane.rowIndex="3" />
-            <Label prefHeight="17.0" prefWidth="61.0" text=" Deadline" GridPane.rowIndex="4" />
+            <Label prefHeight="17.0" prefWidth="61.0" text=" Deadline" GridPane.rowIndex="5" />
             <TextField fx:id="firstNameField" GridPane.columnIndex="1" />
             <TextField fx:id="descriptionField" prefHeight="54.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="priorityField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="contextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="deadlineField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="deadlineField" prefHeight="24.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text=" Fecha inicio" GridPane.rowIndex="4" />
+            <TextField fx:id="startField" prefHeight="23.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
-      <Button layoutX="116.0" layoutY="274.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="61.0" text="OK" />
-      <Button layoutX="196.0" layoutY="274.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="74.0" text="Cancelar" />
-      <ComboBox fx:id="projectBox" layoutX="93.0" layoutY="223.0" prefHeight="25.0" prefWidth="198.0" />
-      <Label layoutY="217.0" prefHeight="25.0" prefWidth="85.0" text=" Proyecto" />
-      <Label layoutY="235.0" text=" Asociado" />
+      <Button layoutX="116.0" layoutY="309.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="61.0" text="OK" />
+      <Button layoutX="192.0" layoutY="309.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="74.0" text="Cancelar" />
+      <ComboBox fx:id="projectBox" layoutX="93.0" layoutY="258.0" prefHeight="25.0" prefWidth="198.0" />
+      <Label layoutY="253.0" prefHeight="25.0" prefWidth="85.0" text=" Proyecto" />
+      <Label layoutY="271.0" text=" Asociado" />
    </children>
 </AnchorPane>
