--- a/TaskManager/src/view/TasksInProjectView.fxml
+++ b/TaskManager/src/view/TasksInProjectView.fxml
@@ -7,28 +7,32 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksInProjectViewController">
    <children>
-      <TableView fx:id="taskTable" layoutX="30.0" layoutY="74.0" prefHeight="267.0" prefWidth="164.0">
-        <columns>
-          <TableColumn fx:id="Name" prefWidth="75.0" text="Lista de Tareas" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Label layoutX="55.0" layoutY="14.0" prefHeight="17.0" prefWidth="164.0" text="Tareas asociadas al proyecto" />
-      <Label fx:id="projectLabel" layoutX="14.0" layoutY="45.0" prefHeight="17.0" prefWidth="172.0" text="Label" />
-      <Button layoutX="84.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="56.0" text="OK" />
-      <Label layoutX="219.0" layoutY="101.0" prefHeight="17.0" prefWidth="64.0" text="Inicio" />
-      <Label layoutX="219.0" layoutY="131.0" prefHeight="17.0" prefWidth="64.0" text="Deadline" />
-      <Label layoutX="219.0" layoutY="74.0" prefHeight="17.0" prefWidth="64.0" text="Estado" />
-      <Label fx:id="stateLabel" layoutX="283.0" layoutY="74.0" prefHeight="17.0" prefWidth="84.0" />
-      <Label fx:id="startLabel" layoutX="283.0" layoutY="101.0" prefHeight="17.0" prefWidth="84.0" />
-      <Label fx:id="deadlineLabel" layoutX="283.0" layoutY="131.0" prefHeight="17.0" prefWidth="84.0" />
-      <Label layoutX="225.0" layoutY="220.0" prefHeight="17.0" prefWidth="144.0" text="Cambiar deadline en 1 día" />
-      <Button layoutX="211.0" layoutY="185.0" mnemonicParsing="false" onAction="#handleDayUp" prefHeight="17.0" prefWidth="172.0" text="+ 1 día" />
-      <Label layoutX="211.0" layoutY="328.0" prefHeight="17.0" prefWidth="172.0" text="Cambiar deadline en 1 semana" />
-      <Button layoutX="211.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleDayDown" prefHeight="17.0" prefWidth="172.0" text="- 1 día" />
-      <Button layoutX="211.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleWeekDown" prefHeight="17.0" prefWidth="172.0" text="- 1 semana" />
-      <Button layoutX="211.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleWeekUp" prefHeight="17.0" prefWidth="172.0" text="+ 1 semana" />
+      <AnchorPane layoutX="30.0" layoutY="74.0" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="215.0" AnchorPane.topAnchor="74.0">
+         <children>
+            <TableView fx:id="taskTable" prefHeight="267.0" prefWidth="164.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columns>
+                <TableColumn fx:id="Name" prefWidth="75.0" text="Lista de Tareas" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </AnchorPane>
+      <Label layoutX="55.0" layoutY="14.0" prefHeight="17.0" prefWidth="164.0" text="Tareas asociadas al proyecto" AnchorPane.leftAnchor="55.0" />
+      <Label fx:id="projectLabel" layoutX="14.0" layoutY="45.0" prefHeight="17.0" prefWidth="172.0" text="Label" AnchorPane.leftAnchor="14.0" />
+      <Button layoutX="84.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="56.0" text="OK" AnchorPane.bottomAnchor="25.0" />
+      <Label layoutX="219.0" layoutY="101.0" prefHeight="17.0" prefWidth="64.0" text="Inicio" AnchorPane.rightAnchor="126.0" />
+      <Label layoutX="219.0" layoutY="131.0" prefHeight="17.0" prefWidth="64.0" text="Deadline" AnchorPane.rightAnchor="126.0" />
+      <Label layoutX="219.0" layoutY="74.0" prefHeight="17.0" prefWidth="64.0" text="Estado" AnchorPane.rightAnchor="126.0" />
+      <Label fx:id="stateLabel" layoutX="283.0" layoutY="74.0" prefHeight="17.0" prefWidth="84.0" AnchorPane.rightAnchor="42.0" />
+      <Label fx:id="startLabel" layoutX="283.0" layoutY="101.0" prefHeight="17.0" prefWidth="84.0" AnchorPane.rightAnchor="42.0" />
+      <Label fx:id="deadlineLabel" layoutX="283.0" layoutY="131.0" prefHeight="17.0" prefWidth="84.0" AnchorPane.rightAnchor="42.0" />
+      <Label layoutX="225.0" layoutY="220.0" prefHeight="17.0" prefWidth="144.0" text="Cambiar deadline en 1 día" AnchorPane.rightAnchor="40.0" />
+      <Button layoutX="211.0" layoutY="185.0" mnemonicParsing="false" onAction="#handleDayUp" prefHeight="17.0" prefWidth="172.0" text="+ 1 día" AnchorPane.rightAnchor="26.0" />
+      <Label layoutX="211.0" layoutY="328.0" prefHeight="17.0" prefWidth="172.0" text="Cambiar deadline en 1 semana" AnchorPane.rightAnchor="26.0" />
+      <Button layoutX="211.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleDayDown" prefHeight="17.0" prefWidth="172.0" text="- 1 día" AnchorPane.rightAnchor="26.0" />
+      <Button layoutX="211.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleWeekDown" prefHeight="17.0" prefWidth="172.0" text="- 1 semana" AnchorPane.rightAnchor="26.0" />
+      <Button layoutX="211.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleWeekUp" prefHeight="17.0" prefWidth="172.0" text="+ 1 semana" AnchorPane.rightAnchor="26.0" />
    </children>
 </AnchorPane>
