--- a/TaskManager/bin/view/TareaView.fxml
+++ b/TaskManager/bin/view/TareaView.fxml
@@ -5,53 +5,46 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane layoutX="10.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TareaViewController">
+<AnchorPane layoutX="10.0" prefHeight="241.0" prefWidth="799.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TareaViewController">
    <children>
-      <SplitPane dividerPositions="0.7508361204013378" layoutX="-9.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <AnchorPane layoutX="38.0" layoutY="28.0" AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="255.0" AnchorPane.topAnchor="28.0">
-                     <children>
-                        <TableView fx:id="taskTable" prefHeight="308.0" prefWidth="153.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columns>
-                            <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Tareas" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
-                  <ScrollPane layoutX="214.0" layoutY="51.0" maxHeight="48.0" maxWidth="207.0" prefHeight="48.0" prefViewportHeight="25.0" prefViewportWidth="62.0" prefWidth="207.0" AnchorPane.rightAnchor="25.0">
-                     <content>
-                        <Label fx:id="descriptionLabel" layoutX="220.0" layoutY="76.0" prefHeight="25.0" text="Descripcion" />
-                     </content>
-                  </ScrollPane>
-                  <Label fx:id="firstNameLabel" layoutX="220.0" layoutY="28.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" AnchorPane.rightAnchor="33.0" />
-                  <Label fx:id="priorityLabel" layoutX="291.0" layoutY="156.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" AnchorPane.rightAnchor="101.0" />
-                  <Label fx:id="contextLabel" layoutX="290.0" layoutY="196.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" AnchorPane.rightAnchor="28.0" />
-                  <Label fx:id="deadlineLabel" layoutX="290.0" layoutY="312.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" AnchorPane.rightAnchor="28.0" />
-                  <Label layoutX="217.0" layoutY="156.0" text="Prioridad" AnchorPane.rightAnchor="180.0" />
-                  <Label layoutX="218.0" layoutY="312.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" AnchorPane.rightAnchor="174.0" />
-                  <Label layoutX="217.0" layoutY="196.0" text="Contexto" AnchorPane.rightAnchor="180.0" />
-                  <Label layoutX="217.0" layoutY="271.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" AnchorPane.rightAnchor="180.0" />
-                  <Label fx:id="inicioLabel" layoutX="290.0" layoutY="271.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="28.0" />
-                  <Label layoutX="218.0" layoutY="117.0" prefHeight="17.0" prefWidth="54.0" text="Proyecto" AnchorPane.rightAnchor="174.0" />
-                  <Label fx:id="projectLabel" layoutX="290.0" layoutY="118.0" prefHeight="17.0" prefWidth="128.0" text="Proyecto" AnchorPane.rightAnchor="28.0" />
-                  <Label layoutX="217.0" layoutY="235.0" prefHeight="17.0" prefWidth="49.0" text="Estado" AnchorPane.rightAnchor="180.0" />
-                  <Label fx:id="stateLabel" layoutX="290.0" layoutY="235.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="28.0" />
-               </children></AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="250.0">
-               <children>
-                  <Button layoutX="25.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleNewTask" prefHeight="25.0" prefWidth="97.0" text="Crear Tarea" />
-                  <Button layoutX="25.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleProjectView" text="Vista Proyectos" AnchorPane.bottomAnchor="61.0" />
-                  <Button layoutX="25.0" layoutY="150.0" mnemonicParsing="false" onAction="#handleDeleteTask" prefHeight="25.0" prefWidth="97.0" text="Eliminar Tarea" />
-                  <Button layoutX="25.0" layoutY="97.0" mnemonicParsing="false" onAction="#handleEditTask" prefHeight="25.0" prefWidth="97.0" text="Editar Tarea" />
-                  <Button layoutX="25.0" layoutY="199.0" mnemonicParsing="false" onAction="#handleFinishTask" prefHeight="25.0" prefWidth="97.0" text="Finalizar Tarea" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
+      <ScrollPane layoutX="491.0" layoutY="81.0" maxHeight="48.0" maxWidth="207.0" prefHeight="48.0" prefViewportHeight="25.0" prefViewportWidth="62.0" prefWidth="207.0" AnchorPane.rightAnchor="101.0">
+         <content>
+            <Label fx:id="descriptionLabel" layoutX="220.0" layoutY="76.0" prefHeight="25.0" text="Descripcion" />
+         </content>
+      </ScrollPane>
+      <AnchorPane layoutX="209.0" layoutY="24.0" prefHeight="309.0" prefWidth="242.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="209.0" AnchorPane.rightAnchor="348.0" AnchorPane.topAnchor="24.0">
+         <children>
+            <TableView fx:id="taskTable" prefHeight="327.0" prefWidth="242.0" AnchorPane.bottomAnchor="-39.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columns>
+                <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Tareas" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </AnchorPane>
+    <AnchorPane layoutX="14.0" layoutY="2.0" minHeight="0.0" minWidth="0.0" prefHeight="375.0" prefWidth="155.0">
+         <children>
+            <Button layoutX="25.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleNewTask" prefHeight="25.0" prefWidth="97.0" text="Crear Tarea" />
+            <Button layoutX="25.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleProjectView" text="Vista Proyectos" AnchorPane.bottomAnchor="86.0" />
+            <Button layoutX="25.0" layoutY="121.0" mnemonicParsing="false" onAction="#handleDeleteTask" prefHeight="25.0" prefWidth="97.0" text="Eliminar Tarea" />
+            <Button layoutX="25.0" layoutY="74.0" mnemonicParsing="false" onAction="#handleEditTask" prefHeight="25.0" prefWidth="97.0" text="Editar Tarea" />
+            <Button layoutX="25.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleFinishTask" prefHeight="25.0" prefWidth="97.0" text="Finalizar Tarea" />
+         </children>
+      </AnchorPane>
+      <Label fx:id="firstNameLabel" layoutX="491.0" layoutY="24.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" AnchorPane.rightAnchor="115.0" />
+      <Label fx:id="priorityLabel" layoutX="595.0" layoutY="181.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" AnchorPane.rightAnchor="150.0" />
+      <Label fx:id="contextLabel" layoutX="595.0" layoutY="252.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" AnchorPane.rightAnchor="76.0" />
+      <Label fx:id="deadlineLabel" layoutX="595.0" layoutY="333.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" AnchorPane.rightAnchor="76.0" />
+      <Label layoutX="489.0" layoutY="181.0" text="Prioridad" AnchorPane.rightAnchor="261.0" />
+      <Label layoutX="489.0" layoutY="333.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" AnchorPane.rightAnchor="256.0" />
+      <Label layoutX="491.0" layoutY="252.0" text="Contexto" AnchorPane.rightAnchor="259.0" />
+      <Label layoutX="491.0" layoutY="294.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" AnchorPane.rightAnchor="259.0" />
+      <Label fx:id="inicioLabel" layoutX="595.0" layoutY="294.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="76.0" />
+      <Label layoutX="491.0" layoutY="148.0" prefHeight="17.0" prefWidth="54.0" text="Proyecto" AnchorPane.rightAnchor="254.0" />
+      <Label fx:id="projectLabel" layoutX="595.0" layoutY="148.0" prefHeight="17.0" prefWidth="128.0" text="Proyecto" AnchorPane.rightAnchor="76.0" />
+      <Label layoutX="491.0" layoutY="216.0" prefHeight="17.0" prefWidth="49.0" text="Estado" AnchorPane.rightAnchor="259.0" />
+      <Label fx:id="stateLabel" layoutX="595.0" layoutY="216.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="76.0" />
    </children>
 </AnchorPane>
