--- a/TaskManager/bin/view/TaskView.fxml
+++ b/TaskManager/bin/view/TaskView.fxml
@@ -6,51 +6,43 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
+<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="369.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
    <children>
-      <SplitPane dividerPositions="0.7475247524752475" layoutX="1.0" layoutY="1.0" minHeight="200.0" minWidth="200.0" prefHeight="408.0" prefWidth="608.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <items>
-            <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="382.0" prefWidth="446.0">
-               <children>
-                  <Label fx:id="firstNameLabel" layoutX="220.0" layoutY="46.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" AnchorPane.rightAnchor="39.0" />
-                  <Label fx:id="priorityLabel" layoutX="290.0" layoutY="164.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" AnchorPane.rightAnchor="108.0" />
-                  <Label fx:id="contextLabel" layoutX="290.0" layoutY="215.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" AnchorPane.rightAnchor="34.0" />
-                  <Label fx:id="deadlineLabel" layoutX="290.0" layoutY="305.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" AnchorPane.rightAnchor="34.0" />
-                  <Label layoutX="220.0" layoutY="164.0" text="Prioridad" AnchorPane.rightAnchor="183.0" />
-                  <Label layoutX="218.0" layoutY="305.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" AnchorPane.rightAnchor="180.0" />
-                  <Label layoutX="218.0" layoutY="215.0" text="Contexto" AnchorPane.rightAnchor="185.0" />
-                  <Label layoutX="218.0" layoutY="264.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" AnchorPane.rightAnchor="185.0" />
-                  <Label fx:id="inicioLabel" layoutX="293.0" layoutY="264.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="34.0" />
-                  <AnchorPane layoutX="36.0" layoutY="46.0" prefHeight="308.0" prefWidth="148.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="262.0" AnchorPane.topAnchor="46.0">
-                     <children>
-                        <TableView fx:id="proyectTable" minHeight="-Infinity" minWidth="-Infinity" prefHeight="308.0" prefWidth="153.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                           <columns>
-                              <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Proyectos" />
-                           </columns>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
-                  <ScrollPane layoutX="223.0" layoutY="91.0" maxHeight="48.0" maxWidth="207.0" prefHeight="48.0" prefViewportHeight="33.0" prefViewportWidth="207.0" prefWidth="207.0" AnchorPane.rightAnchor="25.0">
-                     <content>
-                        <Label fx:id="descriptionLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" text="Descripcion" />
-                     </content>
-                  </ScrollPane>
-               </children>
-            </AnchorPane>
-            <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="398.0" prefWidth="250.0">
-               <children>
-                  <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" AnchorPane.rightAnchor="73.0" />
-                  <Button layoutX="35.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" AnchorPane.bottomAnchor="61.0" AnchorPane.rightAnchor="84.0" />
-                  <Button layoutX="21.0" layoutY="122.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" AnchorPane.rightAnchor="72.0" />
-                  <Button layoutX="18.0" layoutY="174.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" AnchorPane.rightAnchor="66.0" />
-                  <Button layoutX="26.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" AnchorPane.rightAnchor="73.0" />
-                  <Button layoutX="35.0" layoutY="278.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="25.0" prefWidth="79.0" text="Dashboard" AnchorPane.bottomAnchor="103.0" AnchorPane.rightAnchor="84.0" />
-               </children>
-            </AnchorPane>
-         </items>
-      </SplitPane>
+      <Label fx:id="firstNameLabel" layoutX="502.0" layoutY="25.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" AnchorPane.rightAnchor="105.0" />
+      <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="347.0" prefWidth="193.0" AnchorPane.bottomAnchor="22.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Button layoutX="42.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" AnchorPane.rightAnchor="56.0" />
+            <Button layoutX="50.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" AnchorPane.bottomAnchor="72.0" AnchorPane.rightAnchor="64.0" />
+            <Button layoutX="37.0" layoutY="121.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" AnchorPane.rightAnchor="51.0" />
+            <Button layoutX="33.0" layoutY="168.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" AnchorPane.rightAnchor="46.0" />
+            <Button layoutX="41.0" layoutY="78.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" AnchorPane.rightAnchor="55.0" />
+            <Button layoutX="50.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="25.0" prefWidth="79.0" text="Dashboard" AnchorPane.bottomAnchor="22.0" AnchorPane.rightAnchor="64.0" />
+         </children>
+      </AnchorPane>
+      <Label fx:id="priorityLabel" layoutX="619.0" layoutY="152.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" AnchorPane.rightAnchor="127.0" />
+      <Label fx:id="contextLabel" layoutX="618.0" layoutY="205.0" prefHeight="17.0" prefWidth="128.0" text="Contexto" AnchorPane.rightAnchor="54.0" />
+      <Label fx:id="deadlineLabel" layoutX="618.0" layoutY="314.0" prefHeight="17.0" prefWidth="128.0" text="Deadline" AnchorPane.rightAnchor="54.0" />
+      <Label layoutX="502.0" layoutY="152.0" text="Prioridad" AnchorPane.rightAnchor="249.0" />
+      <Label layoutX="502.0" layoutY="314.0" prefHeight="17.0" prefWidth="54.0" text="Deadline" AnchorPane.rightAnchor="244.0" />
+      <Label layoutX="502.0" layoutY="205.0" text="Estado" AnchorPane.rightAnchor="262.0" />
+      <Label layoutX="502.0" layoutY="261.0" prefHeight="17.0" prefWidth="49.0" text="Inicio" AnchorPane.rightAnchor="249.0" />
+      <Label fx:id="inicioLabel" layoutX="618.0" layoutY="261.0" prefHeight="17.0" prefWidth="128.0" AnchorPane.rightAnchor="54.0" />
+      <AnchorPane layoutX="187.0" layoutY="5.0" prefHeight="299.0" prefWidth="237.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="187.0" AnchorPane.rightAnchor="376.0" AnchorPane.topAnchor="5.0">
+         <children>
+            <TableView fx:id="proyectTable" layoutX="45.0" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="256.0" AnchorPane.bottomAnchor="-40.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="14.0">
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <columns>
+                  <TableColumn fx:id="firstName" prefWidth="75.0" text="Lista de Proyectos" />
+               </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
+      <ScrollPane layoutX="502.0" layoutY="74.0" maxHeight="48.0" maxWidth="207.0" prefHeight="48.0" prefViewportHeight="33.0" prefViewportWidth="207.0" prefWidth="207.0" AnchorPane.rightAnchor="91.0">
+         <content>
+            <Label fx:id="descriptionLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" text="Descripcion" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
