--- a/TaskManager/bin/view/TasksInProjectView.fxml
+++ b/TaskManager/bin/view/TasksInProjectView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksInProjectViewController">
+<AnchorPane prefHeight="445.0" prefWidth="409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TasksInProjectViewController">
    <children>
       <AnchorPane layoutX="30.0" layoutY="74.0" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="215.0" AnchorPane.topAnchor="74.0">
          <children>
@@ -34,5 +34,6 @@
       <Button layoutX="211.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleDayDown" prefHeight="17.0" prefWidth="172.0" text="- 1 día" AnchorPane.rightAnchor="26.0" />
       <Button layoutX="211.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleWeekDown" prefHeight="17.0" prefWidth="172.0" text="- 1 semana" AnchorPane.rightAnchor="26.0" />
       <Button layoutX="211.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleWeekUp" prefHeight="17.0" prefWidth="172.0" text="+ 1 semana" AnchorPane.rightAnchor="26.0" />
+      <Button layoutX="211.0" layoutY="395.0" mnemonicParsing="false" onAction="#handleFinish" prefHeight="25.0" prefWidth="172.0" text="Finalizar tarea" />
    </children>
 </AnchorPane>
