agregando hora a inicio y deadline

--- a/TaskManager/bin/view/BigView.fxml
+++ b/TaskManager/bin/view/BigView.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="400.0" maxWidth="600.0" minHeight="200.0" minWidth="200.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@../../bin/view/DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.BigViewController">
+<BorderPane maxHeight="400.0" maxWidth="600.0" minHeight="200.0" minWidth="200.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.BigViewController">
    <top>
-      <MenuBar stylesheets="@../../bin/view/DarkTheme.css" BorderPane.alignment="CENTER">
+      <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
