--- a/TaskManager/bin/view/TaskEditDialog.fxml
+++ b/TaskManager/bin/view/TaskEditDialog.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="525.0" prefWidth="319.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskEditDialogController">
+<AnchorPane prefHeight="525.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskEditDialogController">
    <children>
-      <GridPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="224.0" prefWidth="292.0" AnchorPane.topAnchor="0.0">
+      <GridPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="224.0" prefWidth="460.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="10.0" prefWidth="94.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="198.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.0" minWidth="10.0" prefWidth="170.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="308.0" minWidth="10.0" prefWidth="308.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="52.0" vgrow="ALWAYS" />
@@ -18,19 +18,19 @@
           <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="13.0" prefWidth="88.0" text="  Nombre" />
-            <Label prefHeight="17.0" prefWidth="85.0" text="  Descripcion" GridPane.rowIndex="1" />
-            <Label text="  Contexto" GridPane.rowIndex="2" />
-            <TextField fx:id="firstNameField" GridPane.columnIndex="1" />
-            <TextField fx:id="descriptionField" prefHeight="70.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="contextField" prefHeight="25.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label prefHeight="13.0" prefWidth="88.0" text="     Nombre" />
+            <Label prefHeight="17.0" prefWidth="85.0" text="     Descripcion" GridPane.rowIndex="1" />
+            <Label text="     Contexto" GridPane.rowIndex="2" />
+            <TextField fx:id="firstNameField" prefHeight="25.0" prefWidth="267.0" GridPane.columnIndex="1" />
+            <TextField fx:id="descriptionField" prefHeight="70.0" prefWidth="236.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="contextField" prefHeight="25.0" prefWidth="182.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button layoutX="116.0" layoutY="472.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="61.0" text="OK" />
-      <Button layoutX="193.0" layoutY="472.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="74.0" text="Cancelar" />
-      <ComboBox fx:id="projectBox" layoutX="94.0" layoutY="332.0" prefHeight="25.0" prefWidth="198.0" />
-      <Label layoutX="14.0" layoutY="327.0" prefHeight="25.0" prefWidth="85.0" text=" Proyecto" />
-      <Label layoutX="14.0" layoutY="345.0" text=" Asociado" />
+      <Button layoutX="161.0" layoutY="472.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="61.0" text="OK" />
+      <Button layoutX="253.0" layoutY="472.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="74.0" text="Cancelar" />
+      <ComboBox fx:id="projectBox" layoutX="212.0" layoutY="340.0" prefHeight="25.0" prefWidth="198.0" />
+      <Label layoutX="14.0" layoutY="335.0" prefHeight="25.0" prefWidth="85.0" text=" Proyecto" />
+      <Label layoutX="14.0" layoutY="353.0" text=" Asociado" />
       <Label layoutX="24.0" layoutY="257.0" prefHeight="17.0" prefWidth="46.0" text="Inicio" />
       <TextField fx:id="deadlineYearField" layoutX="204.0" layoutY="294.0" prefHeight="25.0" prefWidth="98.0" text="Año" />
       <TextField fx:id="deadlineMonthField" layoutX="145.0" layoutY="294.0" prefHeight="25.0" prefWidth="46.0" text="Mes" />
@@ -43,6 +43,15 @@
       <TextField fx:id="startMonthField" layoutX="145.0" layoutY="253.0" prefHeight="25.0" prefWidth="46.0" text="Mes" />
       <TextField fx:id="startDayField" layoutX="88.0" layoutY="253.0" prefHeight="25.0" prefWidth="46.0" text="Dia" />
       <Label layoutX="17.0" layoutY="404.0" prefHeight="17.0" prefWidth="61.0" text="Estado" />
-      <ComboBox fx:id="stateBox" layoutX="93.0" layoutY="400.0" prefHeight="25.0" prefWidth="198.0" />
+      <ComboBox fx:id="stateBox" layoutX="212.0" layoutY="400.0" prefHeight="25.0" prefWidth="198.0" />
+      <TextField fx:id="startHourField" layoutX="311.0" layoutY="253.0" prefHeight="25.0" prefWidth="46.0" />
+      <TextField fx:id="startMinuteField" layoutX="367.0" layoutY="253.0" prefHeight="25.0" prefWidth="46.0" />
+      <TextField fx:id="startSecondField" layoutX="424.0" layoutY="253.0" prefHeight="25.0" prefWidth="46.0" />
+      <TextField fx:id="deadlineHourField" layoutX="311.0" layoutY="294.0" prefHeight="25.0" prefWidth="46.0" />
+      <TextField fx:id="deadlineMinuteField" layoutX="367.0" layoutY="294.0" prefHeight="25.0" prefWidth="46.0" />
+      <TextField fx:id="deadlineSecondField" layoutX="424.0" layoutY="294.0" prefHeight="25.0" prefWidth="46.0" />
+      <Label layoutX="323.0" layoutY="224.0" text="Hora" />
+      <Label layoutX="371.0" layoutY="224.0" text="Minuto" />
+      <Label layoutX="423.0" layoutY="224.0" text="Segundo" />
    </children>
 </AnchorPane>
